src/css/style.css
.btn {
  color: white;
  font-size: 16px;
  background: $color-primary;
  padding: 10px 5px;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  border-color: $color-border-primary;
  cursor: pointer;
  transition: all 200ms ease;
  max-width: 100%;
  width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
  line-height: 20px;
  -moz-appearance: none;
  -webkit-appearance: none;
}


.btn--test {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%);
}


.btn--cart-tab {
  padding: 5px 11px;
  border-radius: 3px 0 0 3px;
  position: fixed;
  right: 0;
  top: 50%;
	transform: translateY(-50%);
	opacity: 1;
  min-width: inherit;
  width: auto;
  height: auto;
  z-index: 2;

  &.js-active {
    transform: translateY(-50%);
    opacity: 1;
  }
}

.btn__counter {
  display: block;
  margin: 0 auto 10px auto;
  font-size: 18px;
}

.icon-cart--side {
  height: 20px;
  width: 20px;
}

.cart {
  position: fixed;
  width: 100%;
  max-width: 350px;
  height: 100%;
  right: 0;
  top: 0;
  z-index: 500;
  background: white;
  border-radius: 1px;
  box-shadow: 0 0 0 rgba(0, 0, 0, 0.1);
  transform: translateX(100%);
  transition: box-shadow 0.2s ease-out, transform 0.2s ease-out;

  &.js-active {
    transform: translateX(0);
    box-shadow: -5px 0 5px rgba(0, 0, 0, 0.1);
  }
}

.js-active {
	transform: translateX(0);
	box-shadow: -5px 0 5px rgba(0, 0, 0, 0.1);
}

.cart-section {
  position: relative;
  padding: 20px;
}

.cart-section--top {
  z-index: 5;
}

.cart-title {
  color: $color-title;
  display: inline-block;
  font-weight: 400;
  font-size: 18px;
  line-height: 1.5;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 90%;
}

.btn--close {
  position: absolute;
  right: 9px;
  top: 8px;
  font-size: 35px;
  color: $color-title;
  border: none;
  background: transparent;
  transition: transform 100ms ease;
  cursor: pointer;
  &:hover {
    transform: scale(1.2);
    color: darken($color-title, 5%);
  }
}

.cart-form {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  padding: 70px 0 140px 0;
}

.cart-item-container {
  height: 100%;
  position: relative;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  perspective: 400px;
  perspective-origin: 50% 0px;
}

.cart-item {
  margin-bottom: 20px;
  overflow: hidden;
  backface-visibility: visible;
  min-height: 65px;
  position: relative;
  opacity: 1;
  transition: opacity 0.2s ease-in-out;

  &.js-hidden {
    opacity: 0;
  }

  &.js-working:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(255,255,255,0.5);
    z-index: 2;
  }
}

.cart-item__img {
  width: 65px;
  height: 65px;
  border-radius: 3px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  background-color: #e5e5e5;
  position: absolute;
}

.cart-item__content {
  width: 100%;
  padding-left: 75px;
}

.cart-item__content-row {
  margin-bottom: 5px;
}

.cart-item__variant-title {
  float: right;
  font-weight: bold;
  font-size: 11px;
  line-height: 17px;
  color: #767676;
}

.cart-item__quantity-container {
  border: 1px solid #767676;
  float: left;
  border-radius: 3px;
}

.quantity-decrement, .quantity-increment {
  color: #767676;
  display: block;
  float: left;
  height: 21px;
  line-height: 16px;
  font-family: monospace;
  width: 25px;
  padding: 0;
  border: none;
  background: transparent;
  box-shadow: none;
  cursor: pointer;
  font-size: 18px;
  text-align: center;
}

.cart-item__quantity {
  color: black;
  width: 38px;
  height: 21px;
  font-size: inherit;
  border: none;
  text-align: center;
  -moz-appearance: textfield;
  background: transparent;
  border-left: 1px solid #767676;
  border-right: 1px solid #767676;
  display: block;
  float: left;
  padding: 0;
  border-radius: 0;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cart-item__price {
  line-height: 23px;
  float: right;
  font-weight: bold;
}

.cart-bottom {
  border-top: 1px solid $color-border;
}

.cart-info {
  padding: 15px 20px 10px;
}

.cart-info__total {
  float: left;
  text-transform: uppercase;
}

.cart-info__small {
  font-size: 11px;
}

.cart-info__pricing {
  float: right;
}

.cart-discount-notice {
  color: $color-title;
  margin-bottom: 10px;
}

.cart-actions-container {
  padding-top: 5px;
}

.pricing {
  margin-left: 5px;
  font-size: 16px;
  color: black;
}




.buy-button-container{
	height: 55px;
	width: 190px;
	background-color: green;

	position: absolute;
	bottom: 20px;
	right:0px;
	padding:4px 15px;
	font-weight:bold;
	/*background: #EEEEEE;*/
	text-align:center;
	/*color: white;*/
	font-family: landrygo,"Times New Roman",serif;
	text-shadow:1px 1px 1px #897c63;
	z-index: 3;
}

.buy-button-container:hover{
	cursor: pointer;
	background-color: grey;
}

.buy-button{
	border: none;
}

.buy-button:hover{
	cursor: pointer;
}

/* Circular Content Carousel Style */
.ca-container{
	position:relative;
	margin:25px auto 20px auto;
	width:990px;
	height:450px;
}
.ca-wrapper{
	width:100%;
	height:100%;
	position:relative;
}
.ca-item{
	position:relative;
	float:left;
	width:330px;
	height:100%;
	text-align:center;
}
.ca-more{
	position: absolute;
	bottom: 100px;
	right:0px;
	padding:4px 15px;
	font-weight:bold;
	background: #EEEEEE;
	text-align:center;
	color: white;
	font-family: landrygo,"Times New Roman",serif;
	text-shadow:1px 1px 1px #897c63;
	z-index: 3;
}

.ca-close{
	position:absolute;
	top:10px;
	right:10px;
	background:#fff url(../pics/cross.png) no-repeat center center;
	width:27px;
	height:27px;
	text-indent:-9000px;
	outline:none;
	-moz-box-shadow:1px 1px 2px rgba(0,0,0,0.2);
	-webkit-box-shadow:1px 1px 2px rgba(0,0,0,0.2);
	box-shadow:1px 1px 2px rgba(0,0,0,0.2);
	opacity:0.7;
}
.ca-close:hover{
	opacity:1.0;
}
.ca-item-main{
	border-radius: 15px;
	position:absolute;
	top:5px;
	left:5px;
	right:5px;
	bottom:5px;
	background:#fff;
	overflow:hidden;
	-moz-box-shadow:1px 1px 2px rgba(0,0,0,0.2);
	-webkit-box-shadow:1px 1px 2px rgba(0,0,0,0.2);
	box-shadow:1px 1px 2px rgba(0,0,0,0.2);
}

.ca-icon{
	width:100%;
	height:440px;
}

.flavor-icon{
	height: 220px;
	margin-top: 25px;
}

.out-of-season .ca-item-main{
	padding-top: 20px;
}

.out-of-season .flavor-icon{
	width:233px;
	height:189px;
	position:relative;
	margin:0 auto;
	background-size: 60%;
}

.ca-item-1 .ca-icon{
	background: url('../pics/mont-mint-flavor-small.png') 0px -35px no-repeat;
	background-size: 100%
}
.ca-item-2 .ca-icon{
	background: url('../pics/white-peach-flavor-small.png') 0px -35px no-repeat;
	background-size: 100%;
}
.ca-item-3 .ca-icon{
	background: url('../pics/smoke-flavor-small.png') 0px -35px no-repeat;
	background-size: 100%;
}
.ca-item-4 .ca-icon{
	background: url('../pics/summer-rain-flavor-small.png') 0px -35px no-repeat;
	background-size: 100%;
}
.ca-item-5 .ca-icon{
	background: url('../pics/spicy-thai-flavor-small.png') 0px -35px no-repeat;
	background-size: 100%;
}
.ca-item-6 .ca-icon{
	background: url('../pics/cane.svg') 50px 0px no-repeat;
	background-size: 65%;
}
.ca-item-7 .ca-icon{
	background: url('../pics/sun.svg') 50px 0px no-repeat;
	background-size: 65%;
}
.ca-item-8 .ca-icon{
	background: url('../pics/apple.svg') 50px 0px no-repeat;
	background-size: 65%;
}
.ca-item-9 .ca-icon{
	background: url('../pics/berry.svg') 60px -10px no-repeat;
	background-size: 65%;
}
.ca-item-10 .ca-icon{
	background: url('../pics/pie.svg') 50px 0px no-repeat;
	background-size: 65%;
}
.ca-item-11 .ca-icon{
	background: url('../pics/chocolate.svg') 50px 0px no-repeat;
	background-size: 65%;
}

.ca-item-12 .ca-icon{
	background: url('../pics/breakfast.svg') center no-repeat;
	background-size: 100%;
}

.ca-item-13 .ca-icon{
	background: url('../pics/georges-peach-flavor.png') center no-repeat;
	background-size: 100%;
}

.ca-item h3{
	font-family: landrygo, 'Coustard', sans-serif;
	text-transform:uppercase;
	font-size:25px;
	color:#000;
	margin:20px;
	margin-top: 50px
	text-align:center;
	text-shadow: 0px 1px 1px #e4ebe9;
}

.out-of-season h3{
	font-size:30px;
	color:#000;
	margin-bottom:20px;
	height:85px;
	text-align:center;
	text-shadow: 0px 1px 1px #e4ebe9;
}

span.out-of-season{
	font-size: 20px;
	color: orange;
	height: 50px;
	width: 165%;
	border: 2px solid orange;
	position: absolute;
	left: -100px;
	top: 120px;
	text-align: center;
	line-height: 50px;
	background: white;
	z-index: 1;
	opacity: 0.9;

	-webkit-transform: rotate(40deg);
	-moz-transform: rotate(40deg);
	-o-transform: rotate(40deg);
	-ms-transform: rotate(40deg);
	transform: rotate(40deg);
}

span.out-of-season.coming-soon{
	color: #00B4FF;
	border: 2px solid #00B4FF;
}


.ca-item h4{
	font-family: landrygo,"Times New Roman",serif;
	text-align:center;
	font-weight: bold;
	line-height:24px;
	font-size:14px;

	background: rgba(255, 255, 255, 0.58);

	position: absolute;
	top: 0px;

	width: 100%;
	height: 450px;

	z-index: 2;
	display: none;
}

.ca-item h4 span{
	top: 150px;
	width: 90%;
	margin: 125px auto 0 auto;
}

.ca-item-main:hover h4{
	display: block;
}

.ca-item h4 span{
	display:block;
}
.ca-item h4  span.ca-quote{
	color:#f4eee3;
	font-size:100px;
	position:absolute;
	top:20px;
	left:0px;
	text-indent:0px;
}
.ca-content-wrapper{
	background:#EEEEEE;
	position:absolute;
	width:0px; /* expands to width of the wrapper minus 1 element */
	height:440px;
	top:5px;
	text-align:left;
	z-index:10;
	overflow:hidden;
	border-radius: 30px;
}
.ca-content{
	width:660px;
	overflow:hidden;
}
.ca-content-text{
	font-size: 14px;
	font-style: italic;
	font-family: "Georgia","Times New Roman",serif;
	margin:10px 20px;
	padding:10px 20px;
	line-height:24px;
}
.ca-content-text p{
	padding-bottom:5px;
}
.ca-content h6{
	text-indent: 30px;
	line-height: 30px;
	margin:25px 20px 0px 35px;
	font-size: 14px;
	padding-bottom:5px;
	color:black;
	font-family: landrygo, 'Coustard', sans-serif;
}
.ca-content ul{
	margin:20px 35px;
	height:30px;
}
.ca-content ul li{
	float:left;
	margin:0px 2px;
}
.ca-content ul li a{
	color:#fff;
	background:#000;
	padding:3px 6px;
	font-size:14px;
	font-family: "Georgia","Times New Roman",serif;
	font-style:italic;
}
.ca-content ul li a:hover{
	background:#fff;
	color:#000;
	text-shadow:none;
}
.ca-nav span{
	width:30px;
	height:50px;
	background:transparent url(../pics/arrows.png) no-repeat top left;
	position:absolute;
	top:48%;
	margin-top:-19px;
	left:-40px;
	text-indent:-9000px;
	opacity:0.7;
	cursor:pointer;
	z-index:100;
	background-size: 225%;
}
.ca-nav span.ca-nav-next{
	background-position:top right;
	left:auto;
	right:-40px;
}
.ca-nav span:hover{
	opacity:1.0;
}

